crates/uitest/fixtures/ty/def/trait_impl_missing_bound.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_impl_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ trait_impl_missing_bound.fe:9:9
  │
9 │ impl<T> Foo for Cache<T> {}
  │         ^^^ `_` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
  ┌─ trait_impl_missing_bound.fe:9:17
  │
9 │ impl<T> Foo for Cache<T> {}
  │                 ^^^^^^^^ `T` doesn't implement `Hashable`
